# nbody-solar

./: README.md  pyproject.toml
config/: config.yaml
nbody-solar/: README.md  pyproject.toml
nbody-solar/config/: config.yaml  logging.yaml
nbody-solar/src/nbody/: analysis.py  cli.py  config.py  constants.py  diagnostics.py  initial_conditions.py  integrators.py  physics.py  simulation.py  viz.py
src/nbody/: __init__.py  analysis.py  cli.py  config.py  diagnostics.py  initial_conditions.py  integrators.py  physics.py  simulation.py  viz.py
tests/: test_intruder_ramp.py  test_smoke.py
